# HeatSafe

./: main.py  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/features/landing/: HeatSafeLanding.tsx
frontend/src/features/map/: MapSection.tsx  MapWidget.tsx
frontend/src/features/risk-profile/: HeatSafeChatPage.tsx  HeatSafeChatbot.tsx
frontend/src/features/routing/: AnalyticsPanel.tsx  CommandCenter.tsx  SummaryPanel.tsx
frontend/src/services/: routeApi.ts
frontend/src/types/: geojson.d.ts  route.ts
llm_engine/: requirements.txt
llm_engine/artifacts/: niosh_tables.json  profiler_config.json  sample_output.json
llm_engine/notebooks/: occupation_profiler_niosh_psi.ipynb
llm_engine/ragpipeline/notebooks/: rag_api.py  rag_fullpipeline.ipynb
llm_engine/ragpipeline/vector_store/: rag_metrics_report.json  rag_pipeline_config.json  sample_api_request_response.json
llm_engine/src/: schemas.py
llm_engine/src/data/notebooks/artifacts/ragpipeline/notebooks/: occupation_profiler_niosh_psi.ipynb
routing/: requirements.txt
routing/api/: app.py
routing/artifacts/: cool_route.geojson  route_summary.json  shortest_route.geojson  thermal_route_map.html
routing/notebooks/: thermal_router.ipynb
shade_model/artifacts/: label_encoders.joblib  model_metadata.json  scaler.joblib  shade_model.joblib
shade_model/notebooks/: shade_model(dehradun).ipynb
