[project]
name = "heatsafe-navigator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "groq>=0.37.1",
    "instructor>=1.15.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langsmith>=0.8.0",
    "llama-index>=0.14.21",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "osmnx>=2.1.0",
    "pandas>=3.0.2",
    "pvlib>=0.15.1",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "rich>=14.3.4",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "shap>=0.51.0",
    "shapely>=2.1.2",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.46.0",
    "xgboost>=3.2.0",
]
